--- a/force-app/main/default/pages/SummitEventsRegister.page
+++ b/force-app/main/default/pages/SummitEventsRegister.page
@@ -368,7 +368,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                                 <div class="slds-form-element__control">
                                     <apex:input type="email" id="confirm-email" html-aria-describedby="email-required" required="true" styleClass="slds-input validEmail" disabled="{!contactSet && !ISBLANK(eventRegistration.Registrant_Email__c)}"/>
                                 </div>
-                                <div class="slds-form-element__help" id="email-required">Email address doesn't match</div>
+                                <div class="slds-form-element__help" id="email-required">This field is required</div>
                             </div>
                         </apex:outputPanel>
 
